<resources>
    <string name="app_name">Movies App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pass">PassWord</string>
    <string name="register">Register</string>
    <string name="username">username</string>
    <string name="welcome">Welcome</string>
    <string name="login">login</string>
    <string name="log_in_to_your_account">log in to your account</string>
    <string name="log_in_with_tmdb">log in with tmdb</string>
    <string name="login_in_with_firebase">login in with firebase</string>
    <string name="categories">categories</string>
    <string name="movie_db_app">Movies</string>
    <string name="find_your_movies">find your movies</string>
    <string name="log_out">Log Out</string>
    <string name="search_here">search here</string>
    <string name="about_movie">about movie</string>
    <string name="movie_name">movie name</string>
    <string name="release_year">release year</string>
    <string name="rating">rating</string>
    <string name="count">count</string>
    <string name="popularity">popularity</string>
    <string name="notloggedin">user is not logged in</string>
</resources>